--- a/AplikacjaNawigacyjna.Web/appsettings.json
+++ b/AplikacjaNawigacyjna.Web/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ServiceUrls": {
-    "LocationAPI": "https://localhost:7000",
+    "RouteHistoryAPI": "https://localhost:7000",
     "MapPointAPI": "https://localhost:7001",
     "TrafficAPI": "https://localhost:7002",
     "RouteAPI": "https://localhost:7003",
